welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:3: error: type mismatch;
 found   : Int
 required: Boolean
		if (a<=b<=c) return true
                          ^inOrderEqual:6: error: type mismatch;
 found   : Int
 required: Boolean
		if (a<b<c) return true
                        ^